--- a/level1_05.html
+++ b/level1_05.html
@@ -43,5 +43,13 @@
         .addEventListener('click', function(){
             document.getElementById('alert').style.display = 'none';
         })
+
+        // 콜백함수? 파라미터자리에 들어가는 함수
     </script>
+
+    
+    <!-- 
+        1. addEventListener
+        2. getElementsByClassName('name')[0]
+    -->
 </body>
