--- a/level1_02.html
+++ b/level1_02.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="onclick 사용하기">
+    <meta name="description" content="동적 UI 만드는 스텝 (Alert 박스 만들기)">
     <title>level1_02</title>
 
     <style>
@@ -29,5 +29,9 @@
         <button onclick="document.getElementById('alert').style.display = 'none';">닫기</button>
     </div>
     <button onclick="document.getElementById('alert').style.display = 'block';">버튼</button>
+
+    <!--
+        1. onclick 사용하기
+    -->
 </body>
 </html>
