--- a/level3_10.html
+++ b/level3_10.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="array에 자주 쓰는 sort, map, filter 함수">
+    <meta name="description" content="DOM이라는 용어 개념정리 & load 이벤트">
     <!-- Bootstrap CSS -->
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -18,7 +18,7 @@
         }
     </style>
 
-    <title>level3_10</title>
+    <title>level3_12</title>
 </head>
 <body>
   <div class="container">
