22/05/18 드래그실습

--- a/level3_16_slide.html
+++ b/level3_16_slide.html
@@ -210,7 +210,7 @@
     <!--
 
         <기능1: 내가 드래그한 거리만큼 '박스'도 왼쪽으로 움직임>
-        - mousedown: 마우스 눌렀을 때 발생
+        - mousedown: 마우스 눌렀을 때
         - mouseup: 마우스를 뗄 때
         ** click: mousedown + mouseup
         - mousemove: 마우스 움직일 때
@@ -252,7 +252,7 @@
         => 브라우저간 호환성 잡아줌
         => 이벤트리스너 1개만 써도 됨
         => 스와이프, 핀치, 로테이트 이벤리스너도 제공
-        
+
     -->
 </body>                                                       
 </html>
